--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header class="main-header">
-  <a class="main-header-logo">
+  <a href="/" class="main-header-logo">
     <img src="logo-main" width="175" height="45" alt="Логотип магазина Device">
   </a>
   <!-- Здесь будет форма -->
@@ -21,41 +21,40 @@
       <a href="#">Корзина</a>
     </li>
   </ul>
-
   <nav class="header-navigation">
     <ul class="navigation-list">
       <li>
         <a href="catalog.html">Каталог</a>
         <ul class="catalog-list">
           <li>
-        <a href="#">Вирутальная реальность</a>
+            <a href="#">Вирутальная реальность</a>
+          </li>
+          <li>
+            <a href="#">Моноподы для селфи</a>
+          </li>
+          <li>
+            <a href="#">Экшн камеры</a>
+          </li>
+          <li>
+            <a href="#">Фитнес браслеты</a>
+          </li>
+          <li>
+            <a href="#">Умные часы</a>
+          </li>
+          <li>
+            <a href="#">Квадрокоптеры</a>
+          </li>
+        </ul>
       </li>
       <li>
-        <a href="#">Моноподы для селфи</a>
+        <a href="warranty.html">Гарантия</a>
       </li>
       <li>
-        <a href="#">Экшн камеры</a>
+        <a href="delivery.html">Доставка</a>
       </li>
       <li>
-        <a href="#">Фитнес браслеты</a>
+        <a href="contacts.html">Контакты</a>
       </li>
-      <li>
-        <a href="#">Умные часы</a>
-      </li>
-      <li>
-        <a href="#">Квадрокоптеры</a>
-      </li>
-    </ul>
-    </li>
-    <li>
-      <a href="warranty.html">Гарантия</a>
-    </li>
-    <li>
-      <a href="delivery.html">Доставка</a>
-    </li>
-    <li>
-      <a href="contacts.html">Контакты</a>
-    </li>
     </ul>
   </nav>
 </header>
@@ -104,7 +103,7 @@
         <a href="#">По популярности</a>
       </li>
     </ul>
-      <ul class="increasing-deacreasing">
+    <ul class="increasing-deacreasing">
       <li class="to-increase">
         <a href="#">По увеличению</a>
       </li>
@@ -175,6 +174,9 @@
     </ul>
 
     <ul class="pagination-list">
+      <li class="button-back-page">
+        <a href="#">Назад</a>
+      </li>
       <li class="pagination-item-current">1</li>
       <li class="pagination-item">
         <a href="#">2</a>
@@ -182,68 +184,61 @@
       <li class="pagination-item">
         <a href="#">3</a>
       </li>
-    </ul>
-    <ul class="button-back-forward">
       <li class="button-forward-page">
         <a href="#">Вперед</a>
       </li>
-      <li class="button-back-page">
-      <a href="#">Назад</a>
-    </li>
     </ul>
   </section>
-
 </main>
 
 <footer>
   <div class="footer-top">
-  <img src="img/map" height="45"  width="175" alt="Логотип магазина Device" >
-  <ul class="footer_user">
-    <li>
-      <a class="footer-button-login" href="#">Войти</a>
-    </li>
-    <li>
-      <a class="footer-button-compare" href="#">Сравнить</a>
-    </li>
-    <li>
-      <a class="footer-button-cart" href="#">Корзина</a>
-    </li>
-  </ul>
-</div>
+    <a href="/">
+      <img src="img/map" height="45"  width="175" alt="Логотип магазина Device">
+    </a>
+    <ul class="footer_user">
+      <li>
+        <a class="footer-button-login" href="#">Войти</a>
+      </li>
+      <li>
+        <a class="footer-button-compare" href="#">Сравнить</a>
+      </li>
+      <li>
+        <a class="footer-button-cart" href="#">Корзина</a>
+      </li>
+    </ul>
+  </div>
 
   <div class="footer-middle">
-  <p class="footer__address">г.Москва , Улица строителей , 15</p>
-  <ul class="site-navigation">
-    <li>
-      <a href="#">Гарантия</a>
-    </li>
-    <li>
-      <a href="#">Доставка</a>
-    </li>
-    <li>
-      <a href="#">Контакты</a>
-    </li>
-  </ul>
-  <p>Тел.:<a href="tel">+7(495)495-95-95</a>
-  </p>
-</div>
+    <p class="footer__address">г.Москва , Улица строителей , 15</p>
+    <ul class="site-navigation">
+      <li>
+        <a href="#">Гарантия</a>
+      </li>
+      <li>
+        <a href="#">Доставка</a>
+      </li>
+      <li>
+        <a href="#">Контакты</a>
+      </li>
+    </ul>
+    <p>Тел.:<a href="tel">+7(495)495-95-95</a></p>
+  </div>
 
   <div class="footer-bottom">
-  <ul class="footer-social">
-    <li>
-      <a class="social-button" href="#">facebook.com</a>
-    </li>
-    <li>
-      <a class="social-button" href="#">twitter.com</a>
-    </li>
-    <li>
-      <a class="social-button" href="#">instagram.com</a>
-    </li>
-  </ul>
-  <p class="footer-copyright">
-    <a href="https://htmlacademy.ru"></a>
-  </p>
-</div>
+    <ul class="footer-social">
+      <li>
+        <a class="social-button" href="#">facebook.com</a>
+      </li>
+      <li>
+        <a class="social-button" href="#">twitter.com</a>
+      </li>
+      <li>
+        <a class="social-button" href="#">instagram.com</a>
+      </li>
+    </ul>
+    <p class="footer-copyright"><a href="https://htmlacademy.ru"></a></p>
+  </div>
 </footer>
 </body>
 </html>
