--- a/index.html
+++ b/index.html
@@ -67,18 +67,21 @@
     <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
-      <li><span class="main-features-type">8,5 м</span>
-        <span class="main-features-value">Длинна палки</span>
+      <li>
+        <span class="main-features-type">Длинна палки</span>
+        <span class="main-features-value">8,5 м</span>
       </li>
-      <li><span class="main-features-type">5 кг</span>
-        <span class="main-features-value">Вес палки</span>
+      <li>
+        <span class="main-features-type">Вес палки</span>
+        <span class="main-features-value">5 кг</span>
       </li>
-      <li><span class="main-features-type">Карбон</span>
-        <span class="main-features-value">Материал</span>
+      <li>
+        <span class="main-features-type">Материал</span>
+        <span class="main-features-value">Карбон</span>
       </li>
     </ul>
-
   </article>
+
   <article class="main-slider-2">
     <h2 class="visually-hidden">Фитнес браслет</h2>
     <b>Худеем правильно!</b>
@@ -86,8 +89,9 @@
     <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
-      <li><span class="main-features-type">40 часов</span>
-        <span class="main-features-value">Без подзарядки</span>
+      <li>
+        <span class="main-features-type">Без подзарядки</span>
+        <span class="main-features-value">40 часов</span>
       </li>
     </ul>
   </article>
@@ -99,11 +103,13 @@
     <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
-      <li><span class="main-features-type">800 м</span>
-        <span class="main-features-value">Дальность полета</span>
+      <li>
+        <span class="main-features-type">Дальность полета</span>
+        <span class="main-features-value">800 м</span>
       </li>
-      <li><span class="main-features-type">50 м</span>
-        <span class="main-features-value">Радиус поражения</span>
+      <li>
+        <span class="main-features-type">Радиус поражения</span>
+        <span class="main-features-value">50 м</span>
       </li>
     </ul>
   </article>
@@ -145,23 +151,20 @@
         <a href="#">Кредит</a>
       </li>
     </ul>
+
     <ul class="services-list">
       <li class="delivery">
         <h3>Доставка</h3>
-      </li>
-      <li>
         <p>Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно! Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.</p>
       </li>
-    <li class="warranty">
-      <h3>Гарантия</h3>
-      </li>
-      <li>
+
+      <li class="warranty">
+        <h3>Гарантия</h3>
         <p>Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый. Товар, не&nbsp;дом, конечно&nbsp;же.</p>
       </li>
-    <li class="credit">
-      <h3>Кредит</h3>
-      </li>
-      <li>
+
+      <li class="credit">
+        <h3>Кредит</h3>
         <p>Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
       </li>
     </ul>
@@ -169,7 +172,7 @@
 
   <section class="brands">
     <h2 class="visually-hidden">Наши бренды</h2>
-    <ul class="brands">
+    <ul class="brands-list">
       <li>
         <a class="brands_link__djj" href="#">DJJ</a>
       </li>
@@ -203,12 +206,13 @@
     <img src="img/img:map-big.png" height="320"  width="460" alt="Карта">
     <a href="#">Напишите нам</a>
   </section>
-
 </main>
 
 <footer>
   <div class="footer-top">
-    <img src="img/map" height="45"  width="175" alt="Логотип магазина Device">
+    <a>
+      <img src="img/map" height="45"  width="175" alt="Логотип магазина Device">
+    </a>
     <ul class="footer_user">
       <li>
         <a class="footer-button-login" href="#">Войти</a>
@@ -235,8 +239,7 @@
         <a href="#">Контакты</a>
       </li>
     </ul>
-    <p>Тел.:<a href="tel">+7(495)495-95-95</a>
-    </p>
+    <p>Тел.:<a href="tel">+7(495)495-95-95</a></p>
   </div>
 
   <div class="footer-bottom">
@@ -251,8 +254,7 @@
         <a class="social-button" href="#">instagram.com</a>
       </li>
     </ul>
-    <p class="footer-copyright"><a href="https://htmlacademy.ru"></a>
-    </p>
+    <p class="footer-copyright"><a href="https://htmlacademy.ru"></a></p>
   </div>
 </footer>
 </body>
