--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
 <header class="main-header">
   <a href="/" class="main-header-logo">
-    <img src="logo-main" width="175" height="45" alt="Логотип магазина Device">
+    <img src="img/img:logo-header.svg" width="163" height="36" alt="Логотип магазина Device">
   </a>
   <!-- Здесь будет форма -->
   <ul class="user-navigation">
@@ -121,7 +121,7 @@
           <h3>Любительская селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
-          <img src="img/product-1.jpg" height="380"  width="360" alt="Любительская селфи-палка">
+          <img src="img/img:itemc1.jpg" height="380"  width="360" alt="Любительская селфи-палка">
         </p>
         <b>500 руб.</b>
         <div>
@@ -135,7 +135,7 @@
           <h3>Профессиональная селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
-          <img src="img/product-2.jpg" height="380" width="360" alt="Профессиональная селфи-палка">
+          <img src="img/img:itemc2.jpg" height="380" width="360" alt="Профессиональная селфи-палка">
         </p>
         <b>1500 руб.</b>
         <div>
@@ -149,7 +149,7 @@
           <h3>Непотопляемая селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
-          <img src="img/product-3.jpg" height="380"  width="360" alt="Непотопляемая селфи-палка">
+          <img src="img/img:itemc3.jpg" height="380"  width="360" alt="Непотопляемая селфи-палка">
         </p>
         <b>2500 руб.</b>
         <div>
@@ -163,7 +163,7 @@
           <h3>Селфи палка «Следуй за мной»</h3>
         </a>
         <p class="catalog-item-image">
-          <img src="img/product-4.jpg" height="380"  width="360" alt="Селфи палка «Следуй за мной»>
+          <img src="img/img:itemc4.jpg" height="380"  width="360" alt="Селфи палка «Следуй за мной»>
         </p>
         <b>4900 руб.</b>
         <div>
@@ -194,7 +194,7 @@
 <footer>
   <div class="footer-top">
     <a href="/">
-      <img src="img/map" height="45"  width="175" alt="Логотип магазина Device">
+      <img src="img/logo-footer.svg" height="36"  width="163" alt="Логотип магазина Device">
     </a>
     <ul class="footer_user">
       <li>
