--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header class="main-header">
   <a class="main-header-logo">
-    <img src="img/logo-main"  height="45"  width="175" alt="Логотип магазина Device">
+    <img src="img/img:logo-header.svg" height="36" width="163" alt="Логотип магазина Device">
   </a>
   <!-- Здесь будет форма -->
   <ul class="user-navigation">
@@ -63,7 +63,7 @@
   <article class="main-slider-1">
     <h2 class="visually-hidden">Селфи-палка</h2>
     <b>Делай селфи, как Бен Стиллер</b>
-    <img src="img/selfi-stick-main.jpg"  height="1458"  width="1152" alt="Селфи-палка">
+    <img src="img/img:slider1.jpg"  height="486"  width="384" alt="Селфи-палка">
     <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
@@ -85,7 +85,7 @@
   <article class="main-slider-2">
     <h2 class="visually-hidden">Фитнес браслет</h2>
     <b>Худеем правильно!</b>
-    <img src="img/i-clock.jpg" height="1458"  width="1152" alt="Фитнес браслет">
+    <img src="img/img:slider2.jpg" height="485"  width="345" alt="Фитнес браслет">
     <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
@@ -99,7 +99,7 @@
   <article class="main-slider-3">
     <h2 class="visually-hidden">Квадракоптер</h2>
     <b>Порхает как бабочка, жалит как пчела!</b>
-    <img src="img/qudrocopter.jpg" height="1458"  width="1152" alt="Квадракоптер">
+    <img src="img/img:slider3.jpg" height="334"  width="526" alt="Квадракоптер">
     <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
@@ -118,21 +118,27 @@
     <h2 class="visually-hidden">Каталог товаров</h2>
     <ul class="catalog-list">
       <li>
+        <img src="img/img:item1.svg" height="55"  width="97">
         <a href="#">Вирутальная реальность</a>
       </li>
       <li>
+        <img  src="img/img:item2.svg" height="117" width="86">
         <a href="#">Моноподы для селфи</a>
       </li>
       <li>
+        <img src="img/img:item3.svg" height="87"  width="71">
         <a href="#">Экшн камеры</a>
       </li>
       <li>
+        <img src="img/img:item4.svg"  height="65" width="107">
         <a href="#">Фитнес браслеты</a>
       </li>
       <li>
+        <img src="img/img:item5.svg"  height="98"  width="56">
         <a href="#">Умные часы</a>
       </li>
       <li>
+        <img src="img/img:item6.svg"  height="69" width="132">
         <a href="#">Квадрокоптеры</a>
       </li>
     </ul>
@@ -151,19 +157,19 @@
         <a href="#">Кредит</a>
       </li>
     </ul>
-
     <ul class="services-list">
       <li class="delivery">
+        <img src="img/img:delivery.svg" height="164" width="136">
         <h3>Доставка</h3>
         <p>Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно! Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.</p>
       </li>
-
       <li class="warranty">
+        <img src="img/img:warranty.svg" height="195"  width="171">
         <h3>Гарантия</h3>
         <p>Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый. Товар, не&nbsp;дом, конечно&nbsp;же.</p>
       </li>
-
       <li class="credit">
+        <img src="img/img:credit.svg" height="188"  width="156">
         <h3>Кредит</h3>
         <p>Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
       </li>
@@ -174,15 +180,19 @@
     <h2 class="visually-hidden">Наши бренды</h2>
     <ul class="brands-list">
       <li>
+        <img  src="img/img:DJJ.jpg" height="30"  width="78">
         <a class="brands_link__djj" href="#">DJJ</a>
       </li>
       <li>
+        <img src="img/img:SpAdgets.jpg" height="30"  width="78">
         <a class="brands-link__spadgets" href="#">SPAdgets</a>
       </li>
       <li>
+        <img src="img/img:GoPro.jpg"  height="30"  width="78">
         <a class="brands-link__GoPRO" href="#">GoPRO</a>
       </li>
       <li>
+        <img src="img/img:VIVE.jpg" height="30"  width="78">
         <a class="brands-link__vive" href="#">VIVE</a>
       </li>
     </ul>
@@ -203,7 +213,7 @@
   <section class="contacts">
     <h2>Контакты</h2>
     <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
-    <img src="img/img:map-big.png" height="320"  width="460" alt="Карта">
+    <img src="img/img:map1.jpg" height="222"  width="560" alt="Карта">
     <a href="#">Напишите нам</a>
   </section>
 </main>
@@ -211,7 +221,7 @@
 <footer>
   <div class="footer-top">
     <a>
-      <img src="img/map" height="45"  width="175" alt="Логотип магазина Device">
+      <img src="img/logo-footer.svg" height="36"  width="164" alt="Логотип магазина Device">
     </a>
     <ul class="footer_user">
       <li>
@@ -245,7 +255,7 @@
   <div class="footer-bottom">
     <ul class="footer-social">
       <li>
-        <a class="social-button" href="#">facebook.com</a>
+        <a class="social-button"  href="#">facebook.com</a>
       </li>
       <li>
         <a class="social-button" href="#">twitter.com</a>
