--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <form class="search-form" action="search-site" method="post">
     <input class="search-form-field" type="search" name="search" placeholder="Поиск по сайту">
     <input type="submit" name="submit" value="Найти">
+  </form>
   <ul class="user-navigation">
     <li>
       <a href="#">Войти</a>
@@ -49,10 +50,10 @@
         </ul>
       </li>
       <li>
-        <a href="warranty.html">Гарантия</a>
+        <a href="delivery.html">Доставка</a>
       </li>
       <li>
-        <a href="delivery.html">Доставка</a>
+        <a href="warranty.html">Гарантия</a>
       </li>
       <li>
         <a href="contacts.html">Контакты</a>
@@ -67,7 +68,7 @@
     <b>Делай селфи, как Бен Стиллер</b>
     <img src="img/slider1.jpg" height="486" width="384" alt="Селфи-палка">
     <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
-    <a href="#">Подробнее</a>
+    <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
         <span class="main-features-type">Длинна палки</span>
@@ -89,7 +90,7 @@
     <b>Худеем правильно!</b>
     <img src="img/slider2.jpg" height="485" width="345" alt="Фитнес браслет">
     <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
-    <a href="#">Подробнее</a>
+    <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
         <span class="main-features-type">Без подзарядки</span>
@@ -103,7 +104,7 @@
     <b>Порхает как бабочка, жалит как пчела!</b>
     <img src="img/slider3.jpg" height="334" width="526" alt="Квадракоптер">
     <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-    <a href="#">Подробнее</a>
+    <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
         <span class="main-features-type">Дальность полета</span>
@@ -120,22 +121,22 @@
     <h2 class="visually-hidden">Каталог товаров</h2>
     <ul class="catalog-list">
       <li>
-        <a href="#">Вирутальная реальность</a>
+        <a class="type-item-list" href="#">Вирутальная реальность</a>
       </li>
       <li>
-        <a href="#">Моноподы для селфи</a>
+        <a class="type-item-list" href="#">Моноподы для селфи</a>
       </li>
       <li>
-        <a href="#">Экшн камеры</a>
+        <a class="type-item-list" href="#">Экшн камеры</a>
       </li>
       <li>
-        <a href="#">Фитнес браслеты</a>
+        <a class="type-item-list" href="#">Фитнес браслеты</a>
       </li>
       <li>
-        <a href="#">Умные часы</a>
+        <a class="type-item-list" href="#">Умные часы</a>
       </li>
       <li>
-        <a href="#">Квадрокоптеры</a>
+        <a class="type-item-list" href="#">Квадрокоптеры</a>
       </li>
     </ul>
   </section>
@@ -144,13 +145,13 @@
     <h2 class="visually-hidden">Наши услуги</h2>
     <ul class="services">
       <li>
-        <a href="#">Доставка</a>
+        <a class="btn-delivery"  href="#">Доставка</a>
       </li>
       <li>
-        <a href="#">Гарантия</a>
+        <a class="btn-warranty"  href="#">Гарантия</a>
       </li>
       <li>
-        <a href="#">Кредит</a>
+        <a class="btn-credit"  href="#">Кредит</a>
       </li>
     </ul>
     <ul class="services-list">
@@ -173,20 +174,24 @@
     <h2 class="visually-hidden">Наши бренды</h2>
     <ul class="brands-list">
       <li>
-        <img src="img/DJJ.jpg" height="30" width="78">
-        <a class="brands_link__djj" href="#">DJJ</a>
+        <a class="brands_link__djj" href="#">
+          <img src="img/DJJ.jpg" height="30" width="78" alt="DJJ">
+        </a>
       </li>
       <li>
-        <img src="img/SpAdgets.jpg" height="30" width="78">
-        <a class="brands-link__spadgets" href="#">SPAdgets</a>
+        <a class="brands-link__spadgets" href="#">
+          <img src="img/SpAdgets.jpg" height="30" width="78" alt="SPADGETS">
+        </a>
       </li>
       <li>
-        <img src="img/GoPro.jpg" height="30" width="78">
-        <a class="brands-link__GoPRO" href="#">GoPRO</a>
+        <a class="brands-link__GoPRO" href="#">
+          <img src="img/GoPro.jpg" height="30" width="78" alt="GoPRO">
+        </a>
       </li>
       <li>
-        <img src="img/VIVE.jpg" height="30" width="78">
-        <a class="brands-link__vive" href="#">VIVE</a>
+        <a class="brands-link__vive" href="#">
+          <img src="img/VIVE.jpg" height="30" width="78" alt="VIVE">
+        </a>
       </li>
     </ul>
   </section>
@@ -200,14 +205,14 @@
       <li><b>Автотрейдинг</b></li>
       <li><b>ЖелДорЭкспедиция</b></li>
     </ul>
-    <a href="#">Подробнее о нас</a>
+    <a class="btn-about__us" href="#">Подробнее о нас</a>
   </section>
 
   <section class="contacts">
     <h2>Контакты</h2>
     <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
     <img src="img/map1.jpg" height="222" width="560" alt="Карта">
-    <a href="#">Напишите нам</a>
+    <a class="btn-write__me" href="#">Напишите нам</a>
   </section>
 </main>
 
@@ -233,13 +238,13 @@
     <p class="footer__address">г.Москва , Улица строителей , 15</p>
     <ul class="site-navigation">
       <li>
-        <a href="#">Гарантия</a>
+        <a class="btn-delivery" href="#">Доставка</a>
       </li>
       <li>
-        <a href="#">Доставка</a>
+        <a class="btn-warranty" href="#">Гарантия</a>
       </li>
       <li>
-        <a href="#">Контакты</a>
+        <a class="btn-contacts" href="#">Контакты</a>
       </li>
     </ul>
     <p>Тел.:<a href="tel">+7(495)495-95-95</a></p>
