--- a/catalog.html
+++ b/catalog.html
@@ -76,6 +76,29 @@
     </li>
   </ul>
 
+  <section class="sotring-list">
+    <p>Сортировка:</p>
+    <ul class="sorting">
+      <li class="price">
+        <a class="btn-price"  href="#">По цене</a>
+      </li>
+      <li class="type">
+        <a class="btn-type"  href="#">По типу</a>
+      </li>
+      <li class="popular">
+        <a class="btn-popular"  href="#">По популярности</a>
+      </li>
+    </ul>
+    <ul class="increasing-deacreasing">
+      <li class="to-increase">
+        <a class="btn-increasing" href="#">По увеличению</a>
+      </li>
+      <li class="by-decreasing">
+        <a class="btn-decreasing"  href="#">По убыванию</a>
+      </li>
+    </ul>
+  </section>
+
     <h2 class="visually-hidden">Фильтр товаров</h2>
     <form class="filter" method="get" action="https://echo.htmlacademy.ru">
      <fieldset>
@@ -107,6 +130,7 @@
           </li>
         </ul>
       </fieldset>
+
       <fieldset>
         <legend>Bluetooth</legend>
         <ul>
@@ -121,28 +145,6 @@
         </ul>
       </fieldset>
       <button type="submit" class="filter-button button">Показать</button>
-      <fieldset>
-        <legend>Сортировка:</legend>
-          <ul class="sorting">
-            <li class="price">
-              <a class="btn-price"  href="#">По цене</a>
-            </li>
-            <li class="type">
-              <a class="btn-type"  href="#">По типу</a>
-            </li>
-            <li class="popular">
-              <a class="btn-popular"  href="#">По популярности</a>
-            </li>
-          </ul>
-          <ul class="increasing-deacreasing">
-            <li class="to-increase">
-              <a class="btn-increasing" href="#">По увеличению</a>
-            </li>
-            <li class="by-decreasing">
-              <a class="btn-decreasing"  href="#">По убыванию</a>
-            </li>
-          </ul>
-      </fieldset>
     </form>
 
   <section class="list-product">
