--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   </a>
   <form class="search-form" action="search-site" method="post">
     <input class="search-form-field" type="search" name="search" placeholder="Поиск по сайту">
-    <input type="submit" name="submit" value="Найти">
+    <button type="submit" name="search_button" value="Найти"></button>
   </form>
   <ul class="user-navigation">
     <li>
@@ -76,8 +76,8 @@
     </li>
   </ul>
 
-  <section class="sotring-list">
-    <p>Сортировка:</p>
+  <section>
+    <h2 class="sotring-list">Сортировка:</h2>
     <ul class="sorting">
       <li class="price">
         <a class="btn-price"  href="#">По цене</a>
@@ -99,33 +99,39 @@
     </ul>
   </section>
 
+  <section>
     <h2 class="visually-hidden">Фильтр товаров</h2>
     <form class="filter" method="get" action="https://echo.htmlacademy.ru">
-     <fieldset>
-       <legend>По цене:</legend>
-       -----------
-     </fieldset>
+      <fieldset>
+        <legend>По цене:</legend>
+        <button class="filter__round-buttons filter__round-buttons--from" type="button">
+          <span>От 0</span>
+        </button>
+        <button class="filter__round-buttons filter__round-buttons--to" type="button">
+          <span>До 5000</span>
+        </button>
+      </fieldset>
       <fieldset>
         <legend>По цвету:</legend>
         <ul>
           <li class="filter-color">
-            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="black" id="filter-black" checked>
+            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="black" id="filter-black" checked>
             <label for="filter-black">Черный</label>
           </li>
           <li class="filter-color">
-            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="white" id="filter-white">
+            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="white" id="filter-white">
             <label for="filter-white">Белый</label>
           </li>
           <li class="filter-color">
-            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="blue" id="filter-blue" checked>
+            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="blue" id="filter-blue" checked>
             <label for="filter-blue">Синий</label>
           </li>
           <li class="filter-color">
-            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="red" id="filter-red" checked>
+            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="red" id="filter-red" checked>
             <label for="filter-red">Красный</label>
           </li>
           <li class="filter-color">
-            <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pink" id="filter-pink">
+            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="pink" id="filter-pink">
             <label for="filter-pink">Розовый</label>
           </li>
         </ul>
@@ -135,17 +141,20 @@
         <legend>Bluetooth</legend>
         <ul>
           <li class="filter-option">
-            <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth-availability" value="yes" id="filter-yes" checked>
+            <input class="visually-hidden filter-input-radio" type="radio" name="bluetooth-availability" value="yes" id="filter-yes" checked>
             <label for="filter-yes">Есть</label>
           </li>
           <li class="filter-option">
-            <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth-availability" value="no" id="filter-no">
+            <input class="visually-hidden filter-input-radio" type="radio" name="bluetooth-availability" value="no" id="filter-no">
             <label for="filter-no">Нету</label>
           </li>
         </ul>
       </fieldset>
       <button type="submit" class="filter-button button">Показать</button>
     </form>
+  </section>
+
+
 
   <section class="list-product">
     <h2 class="visually-hidden">Список товаров</h2>
@@ -206,7 +215,9 @@
         </div>
       </li>
     </ul>
+  </section>
 
+  <section>
     <ul class="pagination-list">
       <li class="button-back-page">
         <a href="#">Назад</a>
