--- a/index.html
+++ b/index.html
@@ -148,25 +148,25 @@
     <h2 class="visually-hidden">Наши услуги</h2>
     <ul class="services">
       <li>
-        <a class="btn-delivery"  href="#">Доставка</a>
+        <a class="btn-delivery" href="#delivery">Доставка</a>
       </li>
       <li>
-        <a class="btn-warranty"  href="#">Гарантия</a>
+        <a class="btn-warranty" href="#warranty">Гарантия</a>
       </li>
       <li>
-        <a class="btn-credit"  href="#">Кредит</a>
+        <a class="btn-credit" href="#credit">Кредит</a>
       </li>
     </ul>
     <ul class="services-list">
-      <li class="delivery">
+      <li class="delivery" id="delivery">
         <h3>Доставка</h3>
         <p>Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно! Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.</p>
       </li>
-      <li class="warranty">
+      <li class="warranty" id="warranty">
         <h3>Гарантия</h3>
         <p>Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый. Товар, не&nbsp;дом, конечно&nbsp;же.</p>
       </li>
-      <li class="credit">
+      <li class="credit" id="credit">
         <h3>Кредит</h3>
         <p>Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
       </li>
@@ -204,15 +204,9 @@
     <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
     <p>Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленые точки России! Device работает со&nbsp;многими транспортными компаниями</p>
     <ul class="transport-company">
-      <li>
-        <p>Деловые линии</p>
-      </li>
-      <li>
-        <p>Автотрейдинг</p>
-      </li>
-      <li>
-        <p>ЖелДорЭкспедиция</p>
-      </li>
+      <li>Деловые линии</li>
+      <li>Автотрейдинг</li>
+      <li>ЖелДорЭкспедиция</li>
     </ul>
     <a class="btn-about__us" href="#">Подробнее о нас</a>
   </section>
@@ -254,6 +248,7 @@
       </li>
       <li>
         <a class="btn-contacts" href="#">Контакты</a>
+
       </li>
     </ul>
     <p>Тел.:<a href="tel">+7(495)495-95-95</a></p>
