--- a/index.html
+++ b/index.html
@@ -18,48 +18,48 @@
   </form>
   <ul class="user-navigation">
     <li>
-      <a href="#">Войти</a>
+      <a class="header-navigation__link" href="#">Войти</a>
     </li>
     <li>
-      <a href="#">Сравнить</a>
+      <a class="header-navigation__link" href="#">Сравнить</a>
     </li>
     <li>
-      <a href="#">Корзина</a>
+      <a class="header-navigation__link" href="#">Корзина</a>
     </li>
   </ul>
   <nav class="header-navigation">
     <ul class="navigation-list">
       <li>
-        <a href="catalog.html">Каталог</a>
+        <a class="navigation-list__link" href="catalog.html">Каталог товаров</a>
         <ul class="catalog-list">
           <li>
-            <a href="#">Вирутальная реальность</a>
+            <a class="header-navigation__link" href="#">Вирутальная реальность</a>
           </li>
           <li>
-            <a href="#">Моноподы для селфи</a>
+            <a class="header-navigation__link" href="#">Моноподы для селфи</a>
           </li>
           <li>
-            <a href="#">Экшн камеры</a>
+            <a class="header-navigation__link" href="#">Экшн камеры</a>
           </li>
           <li>
-            <a href="#">Фитнес браслеты</a>
+            <a class="header-navigation__link" href="#">Фитнес браслеты</a>
           </li>
           <li>
-            <a href="#">Умные часы</a>
+            <a class="header-navigation__link" href="#">Умные часы</a>
           </li>
           <li>
-            <a href="#">Квадрокоптеры</a>
+            <a class="header-navigation__link" href="#">Квадрокоптеры</a>
           </li>
         </ul>
       </li>
       <li>
-        <a href="delivery.html">Доставка</a>
+        <a class="navigation-list__link" href="delivery.html">Доставка</a>
       </li>
       <li>
-        <a href="warranty.html">Гарантия</a>
+        <a class="navigation-list__link" href="warranty.html">Гарантия</a>
       </li>
       <li>
-        <a href="contacts.html">Контакты</a>
+        <a class="navigation-list__link" href="contacts.html">Контакты</a>
       </li>
     </ul>
   </nav>
@@ -68,9 +68,9 @@
 <main class="container">
   <article class="main-slider-1">
     <h2 class="visually-hidden">Селфи-палка</h2>
-    <b>Делай селфи, как Бен Стиллер</b>
+    <b class="main-slider_link">Делай селфи, как Бен Стиллер</b>
     <img src="img/slider1.jpg" height="486" width="384" alt="Селфи-палка">
-    <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
+    <p class="main-slider__Link">Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
     <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
@@ -90,9 +90,9 @@
 
   <article class="main-slider-2">
     <h2 class="visually-hidden">Фитнес браслет</h2>
-    <b>Худеем правильно!</b>
+    <b class="main-slider_link">Худеем правильно!</b>
     <img src="img/slider2.jpg" height="485" width="345" alt="Фитнес браслет">
-    <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
+    <p class="main-slider__Link">Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
     <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
@@ -104,9 +104,9 @@
 
   <article class="main-slider-3">
     <h2 class="visually-hidden">Квадракоптер</h2>
-    <b>Порхает как бабочка, жалит как пчела!</b>
+    <b class="main-slider_link">Порхает как бабочка, жалит как пчела!</b>
     <img src="img/slider3.jpg" height="334" width="526" alt="Квадракоптер">
-    <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+    <p class="main-slider__Link">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
     <a class="device-btn" href="#">Подробнее</a>
     <ul class="feature-list">
       <li>
@@ -200,8 +200,8 @@
   </section>
 
   <section class="about-us">
-    <h2>О Нас</h2>
-    <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
+    <h2 class="about-us_Link">О нас</h2>
+    <p>Огромный выбор гаджетов не оставит равнодушным гика,который есть в каждом из нас</p>
     <p>Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленые точки России! Device работает со&nbsp;многими транспортными компаниями</p>
     <ul class="transport-company">
       <li>Деловые линии</li>
@@ -211,15 +211,15 @@
     <a class="btn-about__us" href="#">Подробнее о нас</a>
   </section>
 
-  <section class="contacts">
-    <h2>Контакты</h2>
-    <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
+  <section class="contacts" id="contacts">
+    <h2 class="about-us_Link">Контакты</h2>
+    <p >Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
     <img src="img/map1.jpg" height="222" width="560" alt="Карта">
     <a class="btn-write__me" href="#">Напишите нам</a>
   </section>
 </main>
 
-<footer>
+<footer class="main-footer">
   <div class="footer-top">
     <a href="/">
       <img src="img/logo-footer.svg" height="36"  width="164" alt="Логотип магазина Device">
@@ -241,17 +241,17 @@
     <p class="footer__address">г.Москва , Улица строителей , 15</p>
     <ul class="site-navigation">
       <li>
-        <a class="btn-delivery" href="#">Доставка</a>
+        <a class="btn-delivery" href="#delivery">Доставка</a>
       </li>
       <li>
-        <a class="btn-warranty" href="#">Гарантия</a>
+        <a class="btn-warranty" href="#warranty">Гарантия</a>
       </li>
       <li>
-        <a class="btn-contacts" href="#">Контакты</a>
+        <a class="btn-contacts" href="#contacts">Контакты</a>
 
       </li>
     </ul>
-    <p>Тел.:<a href="tel">+7(495)495-95-95</a></p>
+    <p class="telephone_link">Тел.:<a href="tel">+7(495)495-95-95</a></p>
   </div>
 
   <div class="footer-bottom">
@@ -266,7 +266,7 @@
         <a class="social-button" href="#">instagram.com</a>
       </li>
     </ul>
-    <p class="footer-copyright"><a href="https://htmlacademy.ru"></a></p>
+    <p class="footer-copyright"><a href="https://htmlacademy.ru">html academy</a></p>
   </div>
 </footer>
 </body>
