--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <main class="container">
   <article class="main-slider-1">
     <h2 class="visually-hidden">Селфи-палка</h2>
-    <b class="main-slider_link">Делай селфи, как Бен Стиллер</b>
+    <b class="main-slider">Делай селфи, как Бен Стиллер</b>
     <img src="img/slider1.jpg" height="486" width="384" alt="Селфи-палка">
     <p class="main-slider__Link">Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
     <a class="device-btn" href="#">Подробнее</a>
@@ -90,7 +90,7 @@
 
   <article class="main-slider-2">
     <h2 class="visually-hidden">Фитнес браслет</h2>
-    <b class="main-slider_link">Худеем правильно!</b>
+    <b class="main-slider">Худеем правильно!</b>
     <img src="img/slider2.jpg" height="485" width="345" alt="Фитнес браслет">
     <p class="main-slider__Link">Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
     <a class="device-btn" href="#">Подробнее</a>
@@ -104,7 +104,7 @@
 
   <article class="main-slider-3">
     <h2 class="visually-hidden">Квадракоптер</h2>
-    <b class="main-slider_link">Порхает как бабочка, жалит как пчела!</b>
+    <b class="main-slider">Порхает как бабочка, жалит как пчела!</b>
     <img src="img/slider3.jpg" height="334" width="526" alt="Квадракоптер">
     <p class="main-slider__Link">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
     <a class="device-btn" href="#">Подробнее</a>
@@ -222,7 +222,7 @@
 <footer class="main-footer">
   <div class="footer-top">
     <a href="/">
-      <img src="img/logo-footer.svg" height="36"  width="164" alt="Логотип магазина Device">
+      <img src="img/logo-footer.svg" height="35" width="163" alt="Логотип магазина Device">
     </a>
     <ul class="footer_user">
       <li>
@@ -251,7 +251,7 @@
 
       </li>
     </ul>
-    <p class="telephone_link">Тел.:<a href="tel">+7(495)495-95-95</a></p>
+    <p class="phone_link">Тел.:<a href="tel">+7(495)495-95-95</a></p>
   </div>
 
   <div class="footer-bottom">
