--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Device</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css"  rel="stylesheet">
 </head>
@@ -188,7 +187,7 @@
 
       <li class="catalog-item-3">
         <a href="catalog-item-3.html">
-          <h3 lcass="item-3">Непотопляемая селфи-палка</h3>
+          <h3 class="item-3">Непотопляемая селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
           <img src="img/itemC3.jpg" height="380" width="360" alt="Непотопляемая селфи-палка">
