--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Device</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css"  rel="stylesheet">
 </head>
@@ -16,6 +15,7 @@
     <input class="search-form-field" type="search" name="search" placeholder="Поиск по сайту">
     <button type="submit" class="search-button">Найти</button>
   </form>
+  <div class="wrapper">
   <ul class="user-navigation">
     <li>
       <a class="header-navigation__link" href="#">Войти</a>
@@ -63,6 +63,7 @@
       </li>
     </ul>
   </nav>
+  </div>
 </header>
 
 <main class="container">
